kubernetes/apps/autobrr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autobrr
  namespace: autobrr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: autobrr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: autobrr
    spec:
      containers:
        - name: autobrr
          image: ghcr.io/autobrr/autobrr:v1.87.0
          readinessProbe:
            tcpSocket:
              port: 7474
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 7474
            periodSeconds: 30
            failureThreshold: 5
          resources:
            requests:
              cpu: 20m
              memory: 64Mi
            limits:
              memory: 256Mi
          ports:
            - name: http
              containerPort: 7474
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: autobrr-config
