kubernetes/apps/autobrr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: autobrr
  namespace: autobrr
spec:
  selector:
    app.kubernetes.io/name: autobrr
  ports:
    - name: http
      port: 7474
      targetPort: 7474
