kubernetes/apps/autobrr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: autobrr
  namespace: autobrr
spec:
  parentRefs:
    - name: main
      namespace: network
  hostnames:
    - "autobrr.zlaya.tech"
  rules:
    - backendRefs:
        - name: autobrr
          port: 7474
